--- a/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
@@ -1,48 +1,68 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EnergyControlMaui.Views.HomePage"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="#24293D">
+<ContentPage
+    x:Class="EnergyControlMaui.Views.HomePage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BackgroundColor="#24293D"
+    NavigationPage.HasNavigationBar="False">
 
     <ContentPage.Content>
         <Grid>
-            <Image Source="top_bar_home.png" 
-                   HorizontalOptions="FillAndExpand" 
-                   VerticalOptions="Start" 
-                   Aspect="AspectFill"/>
+            <Image
+                Aspect="AspectFill"
+                HorizontalOptions="FillAndExpand"
+                Source="top_bar_home.png"
+                VerticalOptions="Start" />
 
             <StackLayout Orientation="Horizontal">
-                <StackLayout Orientation="Horizontal" Margin="45,8,0,0" Spacing="0">
-                    <Label Text="E" TextColor="#F4F4FC" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
-                    <Label Text="C" TextColor="#8EBBFF" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
+                <StackLayout
+                    Margin="45,8,0,0"
+                    Orientation="Horizontal"
+                    Spacing="0">
+                    <Label
+                        FontAttributes="Bold,Italic"
+                        FontFamily="Inter"
+                        FontSize="32"
+                        Text="E"
+                        TextColor="#F4F4FC" />
+                    <Label
+                        FontAttributes="Bold,Italic"
+                        FontFamily="Inter"
+                        FontSize="32"
+                        Text="C"
+                        TextColor="#8EBBFF" />
                 </StackLayout>
             </StackLayout>
-            <StackLayout  Margin="0,15,0,0" HorizontalOptions="Center">
-                <Label Text="Connection" TextColor="#F4F4FC" FontSize="24" FontFamily="Inter" FontAttributes="Bold"/>
+            <StackLayout Margin="0,15,0,0" HorizontalOptions="Center">
+                <Label
+                    FontAttributes="Bold"
+                    FontFamily="Inter"
+                    FontSize="24"
+                    Text="Connection"
+                    TextColor="#F4F4FC" />
             </StackLayout>
 
             <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                <ImageButton Source="add_device_btn.svg" Clicked="AddButton_Clicked">
+                <ImageButton Clicked="AddButton_Clicked" Source="add_device_btn.svg">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="1"/>
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="0.95"/>
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
                     </VisualStateManager.VisualStateGroups>
                 </ImageButton>
             </StackLayout>
-               
+
             <StackLayout HorizontalOptions="End" VerticalOptions="End">
-                <Image Source="robot.png"/>
+                <Image Source="robot.png" />
             </StackLayout>
         </Grid>
     </ContentPage.Content>
