--- a/EnergyControl/EnergyControlMaui/Views/HomeConnectionPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomeConnectionPage.xaml
@@ -1,100 +1,129 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EnergyControlMaui.Views.HomeConnectionPage"
-             NavigationPage.HasBackButton="False"
-             BackgroundColor="#24293D">
+<ContentPage
+    x:Class="EnergyControlMaui.Views.HomeConnectionPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    BackgroundColor="#24293D"
+    NavigationPage.HasBackButton="False">
 
-    
+
     <ContentPage.Content>
         <Grid>
-            <Image Source="top_bar_home.png" 
-                   HorizontalOptions="FillAndExpand" 
-                   VerticalOptions="Start" 
-                   Aspect="AspectFill"/>
+            <Image
+                Aspect="AspectFill"
+                HorizontalOptions="FillAndExpand"
+                Source="top_bar_home.png"
+                VerticalOptions="Start" />
 
             <StackLayout Orientation="Horizontal">
-                <StackLayout Orientation="Horizontal" Margin="45,8,0,0" Spacing="0">
-                    <Label Text="E" TextColor="#F4F4FC" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
-                    <Label Text="C" TextColor="#8EBBFF" FontSize="32" FontFamily="Inter" FontAttributes="Bold,Italic"/>
+                <StackLayout
+                    Margin="45,8,0,0"
+                    Orientation="Horizontal"
+                    Spacing="0">
+                    <Label
+                        FontAttributes="Bold,Italic"
+                        FontFamily="Inter"
+                        FontSize="32"
+                        Text="E"
+                        TextColor="#F4F4FC" />
+                    <Label
+                        FontAttributes="Bold,Italic"
+                        FontFamily="Inter"
+                        FontSize="32"
+                        Text="C"
+                        TextColor="#8EBBFF" />
                 </StackLayout>
             </StackLayout>
-            <StackLayout  Margin="0,15,0,0" HorizontalOptions="Center">
-                <Label Text="Connection" TextColor="#F4F4FC" FontSize="24" FontFamily="Inter" FontAttributes="Bold"/>
+            <StackLayout Margin="0,15,0,0" HorizontalOptions="Center">
+                <Label
+                    FontAttributes="Bold"
+                    FontFamily="Inter"
+                    FontSize="24"
+                    Text="Connection"
+                    TextColor="#F4F4FC" />
             </StackLayout>
-            
+
             <StackLayout Margin="45,90,0,0">
-                <Label Text="What device do you want to connect?"
-                       TextColor="#F4F4FC"
-                       FontSize="16" 
-                       FontFamily="Inter" 
-                       FontAttributes="Bold"
-                       />
+                <Label
+                    FontAttributes="Bold"
+                    FontFamily="Inter"
+                    FontSize="18"
+                    Text="What device do you want to connect?"
+                    TextColor="#F4F4FC" />
             </StackLayout>
 
-            <StackLayout HorizontalOptions="Center" Margin="0,150,0,0">
-                <ImageButton Source="lamp_btn.svg" Clicked="LampButton_Clicked"  Margin="0,0,0,20">
+            <StackLayout Margin="0,150,0,0" HorizontalOptions="Center">
+                <ImageButton
+                    Margin="0,0,0,20"
+                    Clicked="LampButton_Clicked"
+                    Source="lamp_btn.svg">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="1"/>
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="0.95"/>
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
                     </VisualStateManager.VisualStateGroups>
                 </ImageButton>
 
-                <ImageButton Source="thermostat_btn.svg" Clicked="ThermostatButton_Clicked" Margin="0,0,0,20">
+                <ImageButton
+                    Margin="0,0,0,20"
+                    Clicked="ThermostatButton_Clicked"
+                    Source="thermostat_btn.svg">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="1"/>
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="0.95"/>
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
                     </VisualStateManager.VisualStateGroups>
                 </ImageButton>
 
-                <ImageButton Source="printer_btn.svg" Clicked="PrinterButton_Clicked" Margin="0,0,0,20">
+                <ImageButton
+                    Margin="0,0,0,20"
+                    Clicked="PrinterButton_Clicked"
+                    Source="printer_btn.svg">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="1"/>
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="0.95"/>
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
                     </VisualStateManager.VisualStateGroups>
                 </ImageButton>
 
-                <ImageButton Source="other_device_btn.svg" Clicked="DeviceButton_Clicked">
+                <ImageButton Clicked="DeviceButton_Clicked" Source="other_device_btn.svg">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="1"/>
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="Scale" Value="0.95"/>
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
