--- a/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
@@ -3,10 +3,12 @@
     x:Class="EnergyControlMaui.Views.HomePage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:user="clr-namespace:EnergyControlMaui.Models"
     BackgroundColor="#24293D"
     NavigationPage.HasNavigationBar="False">
 
-    <ContentPage.Content>
+
+    <FlexLayout>
         <Grid>
             <Image
                 Aspect="AspectFill"
@@ -42,8 +44,22 @@
                     TextColor="#F4F4FC" />
             </StackLayout>
 
-            <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-                <ImageButton Clicked="AddButton_Clicked" Source="add_device_btn.svg">
+            <!--  Show All Users List  -->
+
+            <!--<StackLayout VerticalOptions="StartAndExpand">
+                <Button
+                    Margin="0,100,0,0"
+                    BackgroundColor="#8EBBFF"
+                    Clicked="Button_Clicked"
+                    CornerRadius="10"
+                    FontAttributes="Bold"
+                    FontFamily="Inter"
+                    FontSize="20"
+                    HeightRequest="50"
+                    Text="Show Users"
+                    TextColor="#2F3855"
+                    TextTransform="None"
+                    WidthRequest="300">
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
@@ -58,6 +74,56 @@
                             </VisualState>
                         </VisualStateGroup>
                     </VisualStateManager.VisualStateGroups>
+                </Button>
+            </StackLayout>
+
+            <ListView
+                x:Name="listView"
+                Margin="0,-250,0,0"
+                BackgroundColor="AliceBlue"
+                HasUnevenRows="True"
+                HeightRequest="150"
+                HorizontalOptions="Center"
+                ItemsSource="{Binding}"
+                WidthRequest="300">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <VerticalStackLayout Padding="5">
+                                <HorizontalStackLayout>
+                                    <Label
+                                        Padding="0,0,5,0"
+                                        FontSize="17"
+                                        Text="{Binding FirstName}"
+                                        TextColor="Black" />
+                                    <Label
+                                        FontSize="17"
+                                        Text="{Binding LastName}"
+                                        TextColor="Black" />
+                                </HorizontalStackLayout>
+                                <Label FontSize="15" Text="{Binding Email}" />
+                            </VerticalStackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>-->
+
+            <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                <ImageButton Clicked="AddButton_Clicked" Source="add_device_btn.svg">
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroup>
+                            <VisualState x:Name="Normal">
+                                <VisualState.Setters>
+                                    <Setter Property="scale" Value="1" />
+                                </VisualState.Setters>
+                            </VisualState>
+                            <VisualState x:Name="Pressed">
+                                <VisualState.Setters>
+                                    <Setter Property="scale" Value="0.95" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateManager.VisualStateGroups>
                 </ImageButton>
             </StackLayout>
 
@@ -65,5 +131,5 @@
                 <Image Source="robot.png" />
             </StackLayout>
         </Grid>
-    </ContentPage.Content>
+    </FlexLayout>
 </ContentPage>
