--- a/EnergyControl/EnergyControlMaui/Views/ControlPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/ControlPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="EnergyControlMaui.Views.AutomationPage"
+    x:Class="EnergyControlMaui.Views.ControlPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     BackgroundColor="#24293D"
@@ -39,7 +39,13 @@
                     FontAttributes="Bold"
                     FontFamily="Inter"
                     FontSize="24"
-                    Text="Automation"
+                    Text="Control"
+                    TextColor="#F4F4FC" />
+            </StackLayout>
+            <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                <Label
+                    FontSize="18"
+                    Text="No connected devices"
                     TextColor="#F4F4FC" />
             </StackLayout>
         </Grid>
