--- a/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomePage.xaml
@@ -114,12 +114,12 @@
                         <VisualStateGroup>
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
-                                    <Setter Property="scale" Value="1" />
+                                    <Setter Property="Scale" Value="1" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Pressed">
                                 <VisualState.Setters>
-                                    <Setter Property="scale" Value="0.95" />
+                                    <Setter Property="Scale" Value="0.95" />
                                 </VisualState.Setters>
                             </VisualState>
                         </VisualStateGroup>
