--- a/EnergyControl/EnergyControlMaui/Views/HomeConnectionPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomeConnectionPage.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     BackgroundColor="#24293D"
-    NavigationPage.HasBackButton="False">
+    NavigationPage.HasBackButton="False"
+    Shell.TabBarIsVisible="False">
 
 
     <ContentPage.Content>
