--- a/EnergyControl/EnergyControlMaui/Views/AccountPage/AccountPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/AccountPage/AccountPage.xaml
@@ -96,6 +96,7 @@
                 HorizontalOptions="Center"
                 VerticalOptions="CenterAndExpand">
                 <ImageButton
+                    x:Name="SecurityButton"
                     Margin="0,0,0,20"
                     Clicked="SecurityButton_Clicked"
                     Source="security_btn.svg">
