--- a/EnergyControl/EnergyControlMaui/Views/HomePage/SubPages/HomeConnectionPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/HomePage/SubPages/HomeConnectionPage.xaml
@@ -55,6 +55,7 @@
 
             <StackLayout Margin="0,150,0,0" HorizontalOptions="Center">
                 <ImageButton
+                    x:Name="LampButton"
                     Margin="0,0,0,20"
                     Clicked="LampButton_Clicked"
                     Source="lamp_btn.svg">
