--- a/EnergyControl/EnergyControlMaui/Views/ControlPage/ControlPage.xaml
+++ b/EnergyControl/EnergyControlMaui/Views/ControlPage/ControlPage.xaml
@@ -56,6 +56,7 @@
             </StackLayout>
 
             <StackLayout x:Name="LampControl" IsVisible="False">
+
                 <Label
                     x:Name="LampNameLabel"
                     Margin="0,100,0,50"
@@ -80,12 +81,18 @@
                     Source="tap.svg"
                     WidthRequest="70" />
 
+                <ImageButton
+                    x:Name="DisconnectButton"
+                    Clicked="DisconnectButton_Clicked"
+                    HorizontalOptions="EndAndExpand"
+                    Source="disconnect_btn.svg" />
+
                 <StackLayout
                     Margin="0,0,0,45"
                     HorizontalOptions="Center"
                     VerticalOptions="EndAndExpand">
                     <Label
-                        x:Name="displayLabel"
+                        x:Name="DisplayBrightness"
                         Margin="10,0,0,0"
                         FontFamily="Inter"
                         FontSize="18"
@@ -95,12 +102,14 @@
                         TextColor="#F4F4FC"
                         VerticalOptions="Center" />
                     <Slider
-                        x:Name="slider"
+                        x:Name="BrightnessSlider"
                         HeightRequest="50"
                         Maximum="100"
                         MaximumTrackColor="#BEBEBE"
+                        Minimum="0"
                         MinimumTrackColor="#F4F4FC"
                         ThumbColor="#8EBBFF"
+                        ValueChanged="BrightnessSlider_ValueChanged"
                         WidthRequest="250" />
                 </StackLayout>
             </StackLayout>
